// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly image 1`] = `
<div>
  <div
    class="panel"
  >
    <div
      class="title"
    >
      OPTIONS
    </div>
    <div>
      This is dummy ImageOptions
      <button
        type="button"
      >
        updateObjectPanel
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile image 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="adm-divider adm-divider-vertical adm-divider-center divider"
    />
    <div>
      This is dummy ImageOptions
      <button
        type="button"
      >
        updateObjectPanel
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile no element 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="adm-divider adm-divider-vertical adm-divider-center divider"
    />
  </div>
</div>
`;

exports[`should render correctly in mobile others 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="adm-divider adm-divider-vertical adm-divider-center divider"
    />
    <div>
      This is dummy InFillBlock
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile polygon desktop version 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="adm-divider adm-divider-vertical adm-divider-center divider"
    />
    <div>
      This is dummy InFillBlock
    </div>
    <div>
      This is dummy PolygonOptions
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile polygon web version 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="adm-divider adm-divider-vertical adm-divider-center divider"
    />
    <div>
      This is dummy InFillBlock
    </div>
    <div>
      This is dummy PolygonOptions
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile rect 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="adm-divider adm-divider-vertical adm-divider-center divider"
    />
    <div>
      This is dummy InFillBlock
    </div>
    <div>
      This is dummy RectOptions
      <button
        type="button"
      >
        updateDimensionValues
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile text 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="adm-divider adm-divider-vertical adm-divider-center divider"
    />
    <div>
      This is dummy InFillBlock
    </div>
    <div>
      This is dummy TextOptions
      <button
        type="button"
      >
        updateDimensionValues
      </button>
      <button
        type="button"
      >
        updateObjectPanel
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly no element 1`] = `<div />`;

exports[`should render correctly others 1`] = `
<div>
  <div
    class="panel"
  >
    <div
      class="title"
    >
      OPTIONS
    </div>
    <div>
      This is dummy InFillBlock
    </div>
  </div>
</div>
`;

exports[`should render correctly polygon desktop version 1`] = `
<div>
  <div
    class="panel"
  >
    <div
      class="title"
    >
      OPTIONS
    </div>
    <div>
      This is dummy PolygonOptions
    </div>
    <div>
      This is dummy InFillBlock
    </div>
  </div>
</div>
`;

exports[`should render correctly polygon web version 1`] = `
<div>
  <div
    class="panel"
  >
    <div
      class="title"
    >
      OPTIONS
    </div>
    <div>
      This is dummy PolygonOptions
    </div>
    <div>
      This is dummy InFillBlock
    </div>
  </div>
</div>
`;

exports[`should render correctly rect 1`] = `
<div>
  <div
    class="panel"
  >
    <div
      class="title"
    >
      OPTIONS
    </div>
    <div>
      This is dummy RectOptions
      <button
        type="button"
      >
        updateDimensionValues
      </button>
    </div>
    <div>
      This is dummy InFillBlock
    </div>
  </div>
</div>
`;

exports[`should render correctly rect in full color layer 1`] = `
<div>
  <div
    class="panel"
  >
    <div
      class="title"
    >
      OPTIONS
    </div>
    <div>
      This is dummy RectOptions
      <button
        type="button"
      >
        updateDimensionValues
      </button>
    </div>
    <div>
      This is dummy ColorPanel
    </div>
  </div>
</div>
`;

exports[`should render correctly text 1`] = `
<div>
  <div
    class="panel"
  >
    <div
      class="title"
    >
      OPTIONS
    </div>
    <div>
      This is dummy TextOptions
      <button
        type="button"
      >
        updateDimensionValues
      </button>
      <button
        type="button"
      >
        updateObjectPanel
      </button>
    </div>
  </div>
</div>
`;
